Correccion ubicacion vacia

--- a/AppBlog/templates/AppBlog/busquedaEmpresa.html
+++ b/AppBlog/templates/AppBlog/busquedaEmpresa.html
@@ -2,6 +2,9 @@
 {% load static %}
 {% block contenidoQueCambia %}
 
+
+<h1 style="color:red;">{{respuesta}} </h1>
+
 <h1>Ingrese una ubicacion para ver las Empresas</h1>
 
 
