--- a/AppBlog/templates/AppBlog/padre.html
+++ b/AppBlog/templates/AppBlog/padre.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Clean Blog - Start Bootstrap Theme</title>
+        <title>Car Design</title>
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -32,7 +32,7 @@
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'Empresas' %}">Empresas</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'Diseños' %}">Diseños</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'BusquedaEmpresa' %}">Buscar</a></li>
-                        <a class="btn btn-primary" href="#signup">MiCuenta</a>
+                        <a class="btn btn-primary" href="#signup">Mi Cuenta</a>
                     </ul>
                 </div>
             </div>
@@ -55,9 +55,6 @@
         
         {% endblock %} 
         
-
-
-
 <!-- Footer-->
 <footer class="border-top">
     <div class="container px-4 px-lg-5">
